<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC858"
    tools:context=".Controlador.WINDOWS">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/tvwindows"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="299dp"
        android:layout_height="174dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/windows"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/infwindows"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/caractwindows"
        android:textColor="#000000"
        android:textSize="20sp" />
</FrameLayout>