<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF9AE86A"
    tools:context=".Controlador.LINUX">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/tvlinux"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="229dp"
        android:layout_height="136dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/sistema_operativo_linux_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="4dp"
        android:text="@string/inflinux"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="450dp"
        android:text="@string/caratlinux"
        android:textColor="#000000"
        android:textSize="20sp" />
</FrameLayout>