<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8F86"
    tools:context=".EnviarDatos">

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="175dp"
        android:text="@string/titulo2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombres"
        app:layout_constraintBottom_toTopOf="@+id/etEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo2" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="153dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edad"
        app:layout_constraintBottom_toTopOf="@+id/btEnviarDatos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombres" />

    <Button
        android:id="@+id/btEnviarDatos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="290dp"
        android:text="@string/enviarDatos"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#A4FF1100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />

    <Button
        android:id="@+id/btRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="169dp"
        android:text="@string/regresar"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#A4FF1100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEnviarDatos2" />

</androidx.constraintlayout.widget.ConstraintLayout>